--- a/MvcProjectWmp101/Views/Razor/Index3.cshtml
+++ b/MvcProjectWmp101/Views/Razor/Index3.cshtml
@@ -39,7 +39,7 @@
 @Html.Paragraph("p01", 2, "dashed", "Bu bir htmlhelper ile hazırlanmış bir p tagı paragrafıdır.")
 
 <p>
-    lorem
+    Tincidunt integer eu augue augue nunc elit dolor, luctus placerat scelerisque euismod, iaculis eu lacus nunc mi elit, vehicula ut laoreet ac, aliquam sit amet justo nunc tempor, metus vel.    
 
 </p>
 
