--- a/MvcProjectWmp101/Views/Razor/Index5.cshtml
+++ b/MvcProjectWmp101/Views/Razor/Index5.cshtml
@@ -5,3 +5,24 @@
 
 <h2>Index5</h2>
 
+<h3>http Utility</h3>
+<hr />
+@HttpUtility.UrlEncode("https//google.com.tr")
+<br />
+@HttpUtility.UrlDecode("https%2f%2fgoogle.com.tr")
+<br />
+@HttpUtility.HtmlEncode("<b>Onur Ağıcı</b>")
+<br />
+@HttpUtility.HtmlDecode("&lt;b&gt;Onur Ağıcı&lt;/b&gt;")
+<br />
+
+@Html.Raw("<b>Onur Ağıcı</b>")
+<br />
+@Html.Raw("&lt;b&gt;Onur Ağıcı&lt;/b&gt;")
+<br />
+@Html.Raw(@HttpUtility.HtmlDecode("&lt;b&gt;Onur Ağıcı&lt;/b&gt;"))
+<br />
+@*@Html.Raw("<script>alert('Merhaba Mvc');</script>")*@
+<br />
+@Html.Raw("<style>h2{color:red}</style>")
+
