--- a/MvcProjectWmp101/Views/Ef/Index.cshtml
+++ b/MvcProjectWmp101/Views/Ef/Index.cshtml
@@ -1,16 +1,56 @@
 ﻿@using MvcProjectWmp101.Models
-@model IEnumerable<MvcProjectWmp101.Models.Persons>
+@*@model IEnumerable<MvcProjectWmp101.Models.Persons>*@
+@model MvcProjectWmp101.ViewModel.PerAddViewModel
+
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Index</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div>
+                @Html.ActionLink("Add Person", "NewPerson", "Persons", null, new { @class = "btn btn-primary" })
+            </div>
+            <br />
+            <br />
+            <ul class="list-group">
+                <li class="list-group-item active">
+                    <i class="bi bi-people" style="color:red;"> </i>Persons
+                </li>
+                @foreach (var per in Model.Persons)
+                {
+                    <li class="list-group-item">
+                        <i class="bi bi-people" style="color:red;">  </i> @(per.Name+" "+per.SurName) (<i>@per.Age</i>)
+                    </li>
+                }
+            </ul>
+        </div>
+        <div class="col-md-6">
+            <div>
+                @Html.ActionLink("Add Address", "NewAddress", "Addresses", null, new { @class = "btn btn-primary" })
+            </div>
+            <br />
+            <br />
+            <ul class="list-group">
+                <li class="list-group-item active">
+                    <i class="bi bi-house"> </i>Addresses
+                </li>
+                @foreach (var adr in Model.Addresses)
+                {
+                    <li class="list-group-item">
+                        <i class="bi bi-house"> </i> @adr.Description <i class="fas fa-city"></i> @adr.City (<i>@(adr.Persons.Name+" "+adr.Persons.SurName)</i>)
+                    </li>
+                }
+            </ul>
+        </div>
+    </div>
+</div>
 
-@foreach (var per in Model)
-{
-    @(per.Name+" "+per.SurName) 
-    <br />
-
-}
 
