--- a/MvcProjectWmp101/Views/Student/Index.cshtml
+++ b/MvcProjectWmp101/Views/Student/Index.cshtml
@@ -6,7 +6,8 @@
 
 @foreach (var student in Model)
 {
-    @(student.Name+" "+student.Surname+"                           "+student.Classes.ClassName)
+    @(student.Name+" "+student.Surname + "-------------" + student.Classes.ClassName)
     <br />
 }
+
 
