--- a/MvcProjectWmp101/Views/Student/Index.cshtml
+++ b/MvcProjectWmp101/Views/Student/Index.cshtml
@@ -1,13 +1,54 @@
-﻿@using MvcProjectWmp101.Models;
-@model IEnumerable<MvcProjectWmp101.Models.Students>
+﻿
+@model MvcProjectWmp101.Models.Students
 @{
     ViewBag.Title = "Index";
 }
 
-@foreach (var student in Model)
+<h2>ADD STUDENT</h2>
+
+@using (Html.BeginForm())
 {
-    @(student.Name+" "+student.Surname + "-------------" + student.Classes.ClassName)
-    <br />
+    <div class="input-group">
+        @if (ViewBag.Result != null)
+        {
+            <div class="alert alert-@ViewBag.Status" role="alert">
+                @ViewBag.Result
+            </div>
+        }
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text w-15" id="txtName">Name</span>
+        @Html.TextAreaFor(x => x.Name, new { @class = "form-control", placeholder = "Student Name" })
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text w-15" id="txtSurName">SurName</span>
+        @Html.TextBoxFor(x => x.Surname, new { @class = "form-control", placeholder = "SurName" })
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text w-15" id="txtNumber">Number</span>
+        @Html.TextBoxFor(x => x.StudentNumber, new { @class = "form-control", placeholder = "Number", type="number"})
+    </div>
+    <div class="input-group mb-3">
+        <span class="input-group-text w-15" id="txtClasses">Classes</span>
+        @Html.DropDownListFor(x => x.Classes.Id, (List<SelectListItem>)ViewBag.classes, new { @class = "form-control", placeholder = "Classes" })
+    </div>
+
+    if (ViewBag.Result != null)
+    {
+        <div class="input-group mb-3">
+            @Html.ActionLink("Geri Don", "Index", "CsEf", null, new { @class = "btn btn-primary" })
+        </div>
+    }
+
+    else
+    {
+        <div class="input-group mb-3">
+            <input type="submit" value="Save" class="btn btn-success" />
+        </div>
+    }
+
+
+
 }
 
 
