--- a/MvcProjectWmp101/Views/Addresses/Update.cshtml
+++ b/MvcProjectWmp101/Views/Addresses/Update.cshtml
@@ -1,10 +1,9 @@
 ﻿@model MvcProjectWmp101.Models.Addresses
-
 @{
-    ViewBag.Title = "NewAddress";
+    ViewBag.Title = "Update";
 }
 
-<h2>NewAddress</h2>
+<h2>Update</h2>
 
 @using (Html.BeginForm())
 {
@@ -24,6 +23,16 @@
         <span class="input-group-text w-15" id="txtCity">City</span>
         @Html.TextBoxFor(x => x.City, new { @class = "form-control", placeholder = "City" })
     </div>
+
+    //foreach (var item in (List<SelectListItem>)ViewBag.persons)
+    //{
+    //    if (item.Value==Model.Persons.Id.ToString())
+    //    {
+    //        item.Selected = true;
+    //        break;
+    //    }
+    //}
+
     <div class="input-group mb-3">
         <span class="input-group-text w-15" id="txtPersons">Persons</span>
         @Html.DropDownListFor(x => x.Persons.Id, (List<SelectListItem>)ViewBag.persons, new { @class = "form-control", placeholder = "Persons" })
@@ -46,3 +55,5 @@
 
 
 }
+
+
